[package]
name = "pbft"
version = "0.1.0"
authors = ["akihito.nakano <sora.akatsuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.40"
blake2 = "0.8"
