[package]
name = "pbft"
version = "0.1.0"
authors = ["akihito.nakano <sora.akatsuki@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.97", features = ["derive"] }
serde_json = "1.0.40"
blake2 = "0.8"
#libp2p = { path = "../rust-libp2p" }
libp2p = "0.13.1"
tokio = "1.8"
bytes = "0.4"
unsigned-varint = { version = "0.2.1", features = ["codec"] }
futures = "0.1"
